<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/linearLayout_mainActivity_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6E759E"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"

        >
        <ImageView
            android:id="@+id/iv_mainActivity_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:padding="0dp"
            android:src="@drawable/ic_baseline_update_24"
            android:background="@drawable/background_round"
            android:layout_gravity="center"
            >
        </ImageView>
        <TextView
            android:id="@id/iv_mainActivity_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actualization"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            android:layout_gravity="center"
            android:padding="8dp"
            android:layout_weight="1"
            android:textAlignment="center"
            >
        </TextView>

        <Button
            android:id="@+id/btnDownload_mainActivity_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/download"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:typeface="serif"
            style="?attr/materialButtonOutlinedStyle"
            >

        </Button>

    </LinearLayout>
    <TextView
        android:id="@+id/txtV_mainActivity_Thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thursday"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_mainActivity_LinearLayout"
        android:layout_margin="8dp"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints">
    </TextView>

    <TextView
        android:id="@+id/txtV_mainActivity_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/txtV_mainActivity_Thursday"
        app:layout_constraintTop_toBottomOf="@+id/txtV_mainActivity_Thursday"
        >

    </TextView>

    <Button
        android:id="@+id/btn_mainActivity_FinishJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/white"
        android:text="@string/ButtonJornada"
        android:textColor="@color/purple_700"
        android:backgroundTint="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtV_mainActivity_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtV_mainActivity_date"
        >
    </Button>



    <androidx.cardview.widget.CardView
        android:layout_width="2.5in"
        android:layout_height="1in"
        app:layout_constraintTop_toBottomOf="@+id/btn_mainActivity_FinishJ"
        app:layout_constraintStart_toStartOf="@+id/txtV_mainActivity_date"
        app:layout_constraintEnd_toEndOf="@id/btn_mainActivity_FinishJ"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="353dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            >
            <TextView
                android:id="@+id/txtV_mainActivity_Restaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Restaurant"
                android:layout_margin="8dp"
                android:textSize="40dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                tools:ignore="MissingConstraints">

            </TextView>
            <ImageButton
                android:id="@+id/Ibtn_mainActivity_cardV_Restaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_directions_24"
                app:tint="#5089fa"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints"

                >

            </ImageButton>

            <TextView
                android:id="@+id/txtV_mainActivity_CardV_direction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direction"
                android:textSize="20dp"
                app:layout_constraintBottom_toTopOf="@+id/txtV_mainActivity_cardV_Horario"
                tools:ignore="MissingConstraints" />
            <TextView
                android:id="@+id/txtV_mainActivity_cardV_Horario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horario"
                app:layout_constraintBottom_toTopOf="@+id/btn_mainActivity_cardV_Iniciar"
                app:layout_constraintStart_toStartOf="@+id/btn_mainActivity_cardV_Iniciar"

                >
            </TextView>

            <Button
                android:id="@+id/btn_mainActivity_cardV_Iniciar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/init"
                android:textColor="#5E35B1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/txtV_mainActivity_cardV_Horario"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints"
                android:backgroundTint="#FF7043"
                >
            </Button>
            <Button
                android:id="@+id/button_mainActivity_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_mainActivity_cardV_Iniciar"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="#FF7043"
                android:backgroundTint="@color/white"
                >
            </Button>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>