<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">
    <TextView
        android:id="@+id/txtV_detailsActivity_Restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thursday"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="8dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints">
    </TextView>
    <TextView
        android:id="@+id/txtV_detailsActivity_direccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/txtV_detailsActivity_Restaurant"
        app:layout_constraintTop_toBottomOf="@+id/txtV_detailsActivity_Restaurant"
        >

    </TextView>

    <Button
        android:id="@+id/btn_detailsActivity_IniciarVista"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF7043"
        android:text="@string/invist"
        android:textColor="#263238"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtV_detailsActivity_direccion"
        tools:ignore="MissingConstraints"></Button>
    <TextView
        android:id="@+id/txtV_detailsActivity_none"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:text=""
        android:gravity="center"
        android:background="#666666"
        app:layout_constraintTop_toBottomOf="@+id/btn_detailsActivity_IniciarVista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
    </TextView>

    <TextView
        android:id="@+id/txtV_detailsActivity_infoA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoad"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/txtV_detailsActivity_none"
        app:layout_constraintEnd_toEndOf="@id/txtV_detailsActivity_none"
        app:layout_constraintStart_toStartOf="@id/txtV_detailsActivity_none"
        tools:ignore="MissingConstraints"
        android:textStyle="bold"
        android:gravity="center"
        />
    <ImageView
        android:id="@+id/iv_detailsActivity_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:padding="0dp"
        android:src="@drawable/ic_baseline_access_time_33"
        android:background="@drawable/background_round2"
        app:layout_constraintEnd_toStartOf="@+id/txtV_detailsActivity_infoA"
        app:layout_constraintTop_toBottomOf="@+id/txtV_detailsActivity_infoA"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="TODO">
    </ImageView>
    <TextView
        android:id="@+id/txtV_detailsActivity_AttHorario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horat"
        app:layout_constraintStart_toEndOf="@+id/iv_detailsActivity_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtV_detailsActivity_infoA"
        android:textStyle="bold"
        >
    </TextView>
    <TextView
        android:id="@+id/txtV_detailsActivity_horario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horat"
        app:layout_constraintEnd_toEndOf="@id/txtV_detailsActivity_AttHorario"
        app:layout_constraintTop_toBottomOf="@id/txtV_detailsActivity_AttHorario"
        >
    </TextView>
    <ImageView
        android:id="@+id/iv_detailsActivity_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:padding="0dp"
        android:src="@drawable/ic_baseline_call_24"
        android:background="@drawable/background_round2"
        app:layout_constraintTop_toBottomOf="@+id/iv_detailsActivity_time"
        app:layout_constraintStart_toStartOf="@id/iv_detailsActivity_time"
        app:layout_constraintEnd_toStartOf="@id/txtV_detailsActivity_cel"
        app:layout_constraintBottom_toBottomOf="@id/txtV_detailsActivity_cel"
        android:contentDescription="@string/todo">
    </ImageView>
    <TextView
        android:id="@+id/txtV_detailsActivity_telephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tel"
        app:layout_constraintStart_toEndOf="@+id/iv_detailsActivity_call"
        app:layout_constraintTop_toBottomOf="@+id/txtV_detailsActivity_horario"
        android:textStyle="bold"
        >
    </TextView>
    <TextView
        android:id="@+id/txtV_detailsActivity_cel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horat"
        app:layout_constraintTop_toBottomOf="@id/txtV_detailsActivity_telephone"
        app:layout_constraintStart_toStartOf="@id/txtV_detailsActivity_telephone"


        >
    </TextView>

        <TextView
            android:id="@+id/txtV_detailsActivity_llamar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:text="@string/llamar"
            android:textColor="@color/purple_700"
            app:layout_constraintBottom_toBottomOf="@id/txtV_detailsActivity_cel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtV_detailsActivity_cel"
            app:layout_constraintTop_toTopOf="@+id/txtV_detailsActivity_cel"
            android:focusable="true">

        </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>